[package]
name = "kvs"
version = "0.1.0"
authors = ["Lucas Avelino de Lima Jacinto <lukssalj@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.3"
failure = "0.1.8"
bincode = "1.3.3"
serde = "1.0"
chrono = "0.4"
walkdir = "2.2.7"
itertools = "0.10"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
name = "kvs"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "kvs-server"
test = false
path = "src/bin/server.rs"

[[bin]]
name = "kvs-client"
test = false
path = "src/bin/client.rs"
