[package]
name = "kvs"
version = "0.1.0"
authors = ["Lucas Avelino de Lima Jacinto <lukssalj@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.3"
failure = "0.1.8"
bincode = "1.3.3"
serde = "1.0"
chrono = "0.4"
walkdir = "2.2.7"
itertools = "0.10"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
enum-primitive-derive = "0.2"
num-traits = "0.2"
smallvec = "1.6"
sled = "0.34"
serde_json = "1.0"
crossbeam = "0.8.1"
num_cpus = "1.13.0"
rayon = "1.5.1"
portpicker = "0.1.1"
parking_lot = "0.11.1"
mio = { version = "0.7", features = ["os-poll", "net"] }
mio-timerfd = "0.2"
mio-signals = "0.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"


[lib]
name = "kvs"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "kvs-server"
test = false
path = "src/bin/server.rs"

[[bin]]
name = "kvs-client"
test = false
path = "src/bin/client.rs"

[[bench]]
name = "benches"
harness = false